# robotics-hw3

algorithm/: CMakeLists.txt  package.xml
algorithm/script/: custom_subscriber.py
algorithm/work/: work_server.py
common_msgs/: CMakeLists.txt  package.xml
common_msgs/msg/: TimePose.msg
common_msgs/srv/: battery.srv
sensor/: CMakeLists.txt  package.xml
sensor/script/: custom_publisher.py
sensor/work/: work_client.py
